--- a/ml-classification/module-2-linear-classifier-assignment-blank.ipynb
+++ b/ml-classification/module-2-linear-classifier-assignment-blank.ipynb
@@ -2289,12 +2289,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.979440247046831"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_classification_accuracy(sentiment_model, train_data, train_data['sentiment'])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2305,12 +2318,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8668150746537147"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_classification_accuracy(simple_model, train_data, train_data['sentiment'])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2328,12 +2354,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9145368370530358"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_classification_accuracy(sentiment_model, test_data, test_data['sentiment'])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2344,12 +2383,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8693004559635229"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_classification_accuracy(simple_model, test_data, test_data['sentiment'])"
+   ]
   },
   {
    "cell_type": "markdown",
