Comparing predictions with  Majority class prediction

--- a/ml-classification/module-2-linear-classifier-assignment-blank.ipynb
+++ b/ml-classification/module-2-linear-classifier-assignment-blank.ipynb
@@ -2423,11 +2423,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "112164\n",
+      "21252\n"
+     ]
+    }
+   ],
    "source": [
     "num_positive  = (train_data['sentiment'] == +1).sum()\n",
     "num_negative = (train_data['sentiment'] == -1).sum()\n",
@@ -2446,13 +2455,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.842782577394\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_pt = (test_data['sentiment'] == +1).sum()\n",
+    "num_nt = (test_data['sentiment'] == -1).sum()\n",
+    "mj = max(num_pt, num_nt)\n",
+    "mj_acc = mj/len(test_data)\n",
+    "print(mj_acc)"
+   ]
   },
   {
    "cell_type": "markdown",
