--- a/ml-classification/module-3-linear-classifier-learning-assignment-blank.ipynb
+++ b/ml-classification/module-3-linear-classifier-learning-assignment-blank.ipynb
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -502,11 +502,11 @@
     "def predict_probability(feature_matrix, coefficients):\n",
     "    # Take dot product of feature_matrix and coefficients  \n",
     "    # YOUR CODE HERE\n",
-    "    ...\n",
+    "    dotprod = np.dot(feature_matrix, coefficients)\n",
     "    \n",
     "    # Compute P(y_i = +1 | x_i, w) using the link function\n",
     "    # YOUR CODE HERE\n",
-    "    predictions = ...\n",
+    "    predictions = 1.0/(1.0 + np.exp(-dotprod))\n",
     "    \n",
     "    # return predictions\n",
     "    return predictions"
@@ -582,11 +582,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The following outputs must match \n",
+      "------------------------------------------------\n",
+      "correct_predictions           = [ 0.98201379  0.26894142]\n",
+      "output of predict_probability = [ 0.98201379  0.26894142]\n"
+     ]
+    }
+   ],
    "source": [
     "dummy_feature_matrix = np.array([[1.,2.,3.], [1.,-1.,-1]])\n",
     "dummy_coefficients = np.array([1., 3., -1.])\n",
