Compute derivative of log likelihood with respect to a single coefficient

--- a/ml-classification/module-3-linear-classifier-learning-assignment-blank.ipynb
+++ b/ml-classification/module-3-linear-classifier-learning-assignment-blank.ipynb
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -639,7 +639,7 @@
    "source": [
     "def feature_derivative(errors, feature):     \n",
     "    # Compute the dot product of errors and feature\n",
-    "    derivative = ...\n",
+    "    derivative = np.dot(errors, feature)\n",
     "    \n",
     "    # Return the derivative\n",
     "    return derivative"
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -690,11 +690,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The following outputs must match \n",
+      "------------------------------------------------\n",
+      "correct_log_likelihood           = -5.33141161544\n",
+      "output of compute_log_likelihood = -5.33141161544\n"
+     ]
+    }
+   ],
    "source": [
     "dummy_feature_matrix = np.array([[1.,2.,3.], [1.,-1.,-1]])\n",
     "dummy_coefficients = np.array([1., 3., -1.])\n",
@@ -731,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -745,7 +756,7 @@
     "\n",
     "        # Predict P(y_i = +1|x_i,w) using your predict_probability() function\n",
     "        # YOUR CODE HERE\n",
-    "        predictions = ...\n",
+    "        predictions = predict_probability(feature_matrix, coefficients)\n",
     "        \n",
     "        # Compute indicator value for (y_i = +1)\n",
     "        indicator = (sentiment==+1)\n",
@@ -757,11 +768,11 @@
     "            # Recall that feature_matrix[:,j] is the feature column associated with coefficients[j].\n",
     "            # Compute the derivative for coefficients[j]. Save it in a variable called derivative\n",
     "            # YOUR CODE HERE\n",
-    "            derivative = ...\n",
+    "            derivative = feature_derivative(errors,  feature_matrix[:, j])\n",
     "            \n",
     "            # add the step size times the derivative to the current coefficient\n",
     "            ## YOUR CODE HERE\n",
-    "            ...\n",
+    "            coefficients += step_size*derivative\n",
     "        \n",
     "        # Checking whether log likelihood is increasing\n",
     "        if itr <= 15 or (itr <= 100 and itr % 10 == 0) or (itr <= 1000 and itr % 100 == 0) \\\n",
@@ -785,7 +796,39 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iteration   0: log likelihood of observed labels = -36762.09676512\n",
+      "iteration   1: log likelihood of observed labels = -36758.77638693\n",
+      "iteration   2: log likelihood of observed labels = -36758.31911849\n",
+      "iteration   3: log likelihood of observed labels = -36758.25544617\n",
+      "iteration   4: log likelihood of observed labels = -36758.24654026\n",
+      "iteration   5: log likelihood of observed labels = -36758.24529244\n",
+      "iteration   6: log likelihood of observed labels = -36758.24511749\n",
+      "iteration   7: log likelihood of observed labels = -36758.24509295\n",
+      "iteration   8: log likelihood of observed labels = -36758.24508951\n",
+      "iteration   9: log likelihood of observed labels = -36758.24508903\n",
+      "iteration  10: log likelihood of observed labels = -36758.24508896\n",
+      "iteration  11: log likelihood of observed labels = -36758.24508895\n",
+      "iteration  12: log likelihood of observed labels = -36758.24508895\n",
+      "iteration  13: log likelihood of observed labels = -36758.24508895\n",
+      "iteration  14: log likelihood of observed labels = -36758.24508895\n",
+      "iteration  15: log likelihood of observed labels = -36758.24508895\n",
+      "iteration  20: log likelihood of observed labels = -36758.24508895\n",
+      "iteration  30: log likelihood of observed labels = -36758.24508895\n",
+      "iteration  40: log likelihood of observed labels = -36758.24508895\n",
+      "iteration  50: log likelihood of observed labels = -36758.24508895\n",
+      "iteration  60: log likelihood of observed labels = -36758.24508895\n",
+      "iteration  70: log likelihood of observed labels = -36758.24508895\n",
+      "iteration  80: log likelihood of observed labels = -36758.24508895\n",
+      "iteration  90: log likelihood of observed labels = -36758.24508895\n",
+      "iteration 100: log likelihood of observed labels = -36758.24508895\n"
+     ]
+    }
+   ],
    "source": [
     "coefficients = logistic_regression(feature_matrix, sentiment, initial_coefficients=np.zeros(194),\n",
     "                                   step_size=1e-7, max_iter=301)"
