--- a/ml-classification/module-3-linear-classifier-learning-assignment-blank.ipynb
+++ b/ml-classification/module-3-linear-classifier-learning-assignment-blank.ipynb
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -825,7 +825,9 @@
       "iteration  70: log likelihood of observed labels = -36758.24508895\n",
       "iteration  80: log likelihood of observed labels = -36758.24508895\n",
       "iteration  90: log likelihood of observed labels = -36758.24508895\n",
-      "iteration 100: log likelihood of observed labels = -36758.24508895\n"
+      "iteration 100: log likelihood of observed labels = -36758.24508895\n",
+      "iteration 200: log likelihood of observed labels = -36758.24508895\n",
+      "iteration 300: log likelihood of observed labels = -36758.24508895\n"
      ]
     }
    ],
@@ -872,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
@@ -891,12 +893,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def class_prediction(x):\n",
+    "    return +1 if x > 0 else -1\n",
+    "    \n",
+    "\n",
+    "sentiment = map(class_prediction, scores)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -907,12 +915,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Positive sentiment: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "positive_sentiment = (np.asarray(sentiment) == +1).sum()\n",
+    "print('Positive sentiment: '+str(positive_sentiment))"
+   ]
   },
   {
    "cell_type": "markdown",
