Fix issues on Logistic Regression Method

--- a/ml-classification/module-3-linear-classifier-learning-assignment-blank.ipynb
+++ b/ml-classification/module-3-linear-classifier-learning-assignment-blank.ipynb
@@ -70,7 +70,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO] graphlab.cython.cy_server: GraphLab Create v2.1 started. Logging: C:\\Users\\wilson\\AppData\\Local\\Temp\\graphlab_server_1498048007.log.0\n"
+      "[INFO] graphlab.cython.cy_server: GraphLab Create v2.1 started. Logging: C:\\Users\\wilson\\AppData\\Local\\Temp\\graphlab_server_1498279665.log.0\n"
      ]
     }
    ],
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -279,7 +279,7 @@
        "[0L, 0L, 0L, 1L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 1L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 1L, 0L, 1L, 0L, 0L, 1L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, ... ]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -312,7 +312,7 @@
        "2955L"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -421,7 +421,7 @@
        "(53072L, 194L)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -459,7 +459,7 @@
        "array([ 1,  1,  1, ..., -1, -1, -1], dtype=int64)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -639,7 +639,7 @@
    "source": [
     "def feature_derivative(errors, feature):     \n",
     "    # Compute the dot product of errors and feature\n",
-    "    derivative = np.dot(errors, feature)\n",
+    "    derivative = feature.T.dot(errors)\n",
     "    \n",
     "    # Return the derivative\n",
     "    return derivative"
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -772,7 +772,7 @@
     "            \n",
     "            # add the step size times the derivative to the current coefficient\n",
     "            ## YOUR CODE HERE\n",
-    "            coefficients += step_size*derivative\n",
+    "            coefficients[j] = coefficients[j] + step_size*derivative\n",
     "        \n",
     "        # Checking whether log likelihood is increasing\n",
     "        if itr <= 15 or (itr <= 100 and itr % 10 == 0) or (itr <= 1000 and itr % 100 == 0) \\\n",
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -801,33 +801,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "iteration   0: log likelihood of observed labels = -36762.09676512\n",
-      "iteration   1: log likelihood of observed labels = -36758.77638693\n",
-      "iteration   2: log likelihood of observed labels = -36758.31911849\n",
-      "iteration   3: log likelihood of observed labels = -36758.25544617\n",
-      "iteration   4: log likelihood of observed labels = -36758.24654026\n",
-      "iteration   5: log likelihood of observed labels = -36758.24529244\n",
-      "iteration   6: log likelihood of observed labels = -36758.24511749\n",
-      "iteration   7: log likelihood of observed labels = -36758.24509295\n",
-      "iteration   8: log likelihood of observed labels = -36758.24508951\n",
-      "iteration   9: log likelihood of observed labels = -36758.24508903\n",
-      "iteration  10: log likelihood of observed labels = -36758.24508896\n",
-      "iteration  11: log likelihood of observed labels = -36758.24508895\n",
-      "iteration  12: log likelihood of observed labels = -36758.24508895\n",
-      "iteration  13: log likelihood of observed labels = -36758.24508895\n",
-      "iteration  14: log likelihood of observed labels = -36758.24508895\n",
-      "iteration  15: log likelihood of observed labels = -36758.24508895\n",
-      "iteration  20: log likelihood of observed labels = -36758.24508895\n",
-      "iteration  30: log likelihood of observed labels = -36758.24508895\n",
-      "iteration  40: log likelihood of observed labels = -36758.24508895\n",
-      "iteration  50: log likelihood of observed labels = -36758.24508895\n",
-      "iteration  60: log likelihood of observed labels = -36758.24508895\n",
-      "iteration  70: log likelihood of observed labels = -36758.24508895\n",
-      "iteration  80: log likelihood of observed labels = -36758.24508895\n",
-      "iteration  90: log likelihood of observed labels = -36758.24508895\n",
-      "iteration 100: log likelihood of observed labels = -36758.24508895\n",
-      "iteration 200: log likelihood of observed labels = -36758.24508895\n",
-      "iteration 300: log likelihood of observed labels = -36758.24508895\n"
+      "iteration   0: log likelihood of observed labels = -36780.91768478\n",
+      "iteration   1: log likelihood of observed labels = -36775.13434712\n",
+      "iteration   2: log likelihood of observed labels = -36769.35713564\n",
+      "iteration   3: log likelihood of observed labels = -36763.58603240\n",
+      "iteration   4: log likelihood of observed labels = -36757.82101962\n",
+      "iteration   5: log likelihood of observed labels = -36752.06207964\n",
+      "iteration   6: log likelihood of observed labels = -36746.30919497\n",
+      "iteration   7: log likelihood of observed labels = -36740.56234821\n",
+      "iteration   8: log likelihood of observed labels = -36734.82152213\n",
+      "iteration   9: log likelihood of observed labels = -36729.08669961\n",
+      "iteration  10: log likelihood of observed labels = -36723.35786366\n",
+      "iteration  11: log likelihood of observed labels = -36717.63499744\n",
+      "iteration  12: log likelihood of observed labels = -36711.91808422\n",
+      "iteration  13: log likelihood of observed labels = -36706.20710739\n",
+      "iteration  14: log likelihood of observed labels = -36700.50205049\n",
+      "iteration  15: log likelihood of observed labels = -36694.80289716\n",
+      "iteration  20: log likelihood of observed labels = -36666.39512033\n",
+      "iteration  30: log likelihood of observed labels = -36610.01327118\n",
+      "iteration  40: log likelihood of observed labels = -36554.19728365\n",
+      "iteration  50: log likelihood of observed labels = -36498.93316099\n",
+      "iteration  60: log likelihood of observed labels = -36444.20783914\n",
+      "iteration  70: log likelihood of observed labels = -36390.00909449\n",
+      "iteration  80: log likelihood of observed labels = -36336.32546144\n",
+      "iteration  90: log likelihood of observed labels = -36283.14615871\n",
+      "iteration 100: log likelihood of observed labels = -36230.46102347\n",
+      "iteration 200: log likelihood of observed labels = -35728.89418769\n",
+      "iteration 300: log likelihood of observed labels = -35268.51212683\n"
      ]
     }
    ],
@@ -874,9 +874,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 33,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -915,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -924,7 +924,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Positive sentiment: 0\n"
+      "Positive sentiment: 25126\n"
      ]
     }
    ],
