--- a/ml-classification/module-3-linear-classifier-learning-assignment-blank.ipynb
+++ b/ml-classification/module-3-linear-classifier-learning-assignment-blank.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 68,
    "metadata": {
     "collapsed": false
    },
@@ -54,26 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "This non-commercial license of GraphLab Create for academic use is assigned to wilson_jr@outlook.com and will expire on January 07, 2018.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[INFO] graphlab.cython.cy_server: GraphLab Create v2.1 started. Logging: C:\\Users\\wilson\\AppData\\Local\\Temp\\graphlab_server_1498279665.log.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "products = graphlab.SFrame('amazon_baby_subset.gl/')"
    ]
@@ -87,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
@@ -100,7 +85,7 @@
        "[1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, 1L, ... ]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
@@ -131,7 +116,7 @@
        "[\"Stop Pacifier Sucking without tears with Thumbuddy To Love's Binky Fairy Puppet and Adorable Book\", \"Nature's Lullabies Second Year Sticker Calendar\", \"Nature's Lullabies Second Year Sticker Calendar\", 'Lamaze Peekaboo, I Love You', \"SoftPlay Peek-A-Boo Where's Elmo A Children's Book\", 'Our Baby Girl Memory Book', 'Hunnt&reg; Falling Flowers and Birds Kids Nursery Home Decor Vinyl Mural Art Wall Paper Stickers', 'Blessed By Pope Benedict XVI Divine Mercy Full Color Medal', 'Cloth Diaper Pins Stainless Steel Traditional Safety Pin (Black)', 'Cloth Diaper Pins Stainless Steel Traditional Safety Pin (Black)']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 72,
    "metadata": {
     "collapsed": false
    },
@@ -177,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 73,
    "metadata": {
     "collapsed": false
    },
@@ -191,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 74,
    "metadata": {
     "collapsed": false
    },
@@ -222,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 75,
    "metadata": {
     "collapsed": false
    },
@@ -247,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 76,
    "metadata": {
     "collapsed": false
    },
@@ -266,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 77,
    "metadata": {
     "collapsed": false
    },
@@ -279,7 +264,7 @@
        "[0L, 0L, 0L, 1L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 1L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 1L, 0L, 1L, 0L, 0L, 1L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, ... ]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 78,
    "metadata": {
     "collapsed": false
    },
@@ -312,7 +297,7 @@
        "2955L"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 79,
    "metadata": {
     "collapsed": true
    },
@@ -360,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 80,
    "metadata": {
     "collapsed": true
    },
@@ -385,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 81,
    "metadata": {
     "collapsed": false
    },
@@ -410,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 82,
    "metadata": {
     "collapsed": false
    },
@@ -421,7 +406,7 @@
        "(53072L, 194L)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 83,
    "metadata": {
     "collapsed": false
    },
@@ -459,7 +444,7 @@
        "array([ 1,  1,  1, ..., -1, -1, -1], dtype=int64)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 84,
    "metadata": {
     "collapsed": false
    },
@@ -582,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 85,
    "metadata": {
     "collapsed": false
    },
@@ -631,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 86,
    "metadata": {
     "collapsed": true
    },
@@ -660,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 87,
    "metadata": {
     "collapsed": false
    },
@@ -690,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 88,
    "metadata": {
     "collapsed": false
    },
@@ -742,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 89,
    "metadata": {
     "collapsed": false
    },
@@ -792,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 90,
    "metadata": {
     "collapsed": false
    },
@@ -874,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 94,
    "metadata": {
     "collapsed": false
    },
@@ -893,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 95,
    "metadata": {
     "collapsed": false
    },
@@ -903,7 +888,7 @@
     "    return +1 if x > 0 else -1\n",
     "    \n",
     "\n",
-    "sentiment = map(class_prediction, scores)"
+    "pred_sentiment = map(class_prediction, scores)"
    ]
   },
   {
@@ -915,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 96,
    "metadata": {
     "collapsed": false
    },
@@ -929,7 +914,7 @@
     }
    ],
    "source": [
-    "positive_sentiment = (np.asarray(sentiment) == +1).sum()\n",
+    "positive_sentiment = (np.asarray(pred_sentiment) == +1).sum()\n",
     "print('Positive sentiment: '+str(positive_sentiment))"
    ]
   },
@@ -950,14 +935,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-----------------------------------------------------\n",
+      "# Reviews   correctly classified = 39903\n",
+      "# Reviews incorrectly classified = 13169\n",
+      "# Reviews total                  = 53072\n",
+      "-----------------------------------------------------\n",
+      "Accuracy = 0.75\n"
+     ]
+    }
+   ],
    "source": [
-    "num_mistakes = ... # YOUR CODE HERE\n",
-    "accuracy = ... # YOUR CODE HERE\n",
+    "num_mistakes = sum(sentiment != pred_sentiment)\n",
+    "accuracy = (len(products)-num_mistakes)/float(len(products))\n",
     "print \"-----------------------------------------------------\"\n",
     "print '# Reviews   correctly classified =', len(products) - num_mistakes\n",
     "print '# Reviews incorrectly classified =', num_mistakes\n",
