Finds words that contribute to most positive and negative sentiments

--- a/ml-classification/module-3-linear-classifier-learning-assignment-blank.ipynb
+++ b/ml-classification/module-3-linear-classifier-learning-assignment-blank.ipynb
@@ -989,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -1019,12 +1019,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['great',\n",
+       " 'love',\n",
+       " 'easy',\n",
+       " 'little',\n",
+       " 'loves',\n",
+       " 'well',\n",
+       " 'perfect',\n",
+       " 'old',\n",
+       " 'nice',\n",
+       " 'daughter']"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import operator\n",
+    "\n",
+    "map(operator.itemgetter(0), word_coefficient_tuples[:10])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1044,12 +1068,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['monitor',\n",
+       " 'return',\n",
+       " 'back',\n",
+       " 'get',\n",
+       " 'disappointed',\n",
+       " 'even',\n",
+       " 'work',\n",
+       " 'money',\n",
+       " 'product',\n",
+       " 'would']"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "map(operator.itemgetter(0), word_coefficient_tuples[-10:])"
+   ]
   },
   {
    "cell_type": "markdown",
